--- a/Source/Web/EngineOverflow.Web/EngineOverflow.Web.csproj
+++ b/Source/Web/EngineOverflow.Web/EngineOverflow.Web.csproj
@@ -248,6 +248,10 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Data\EngineOverflow.Data.Common\EngineOverflow.Data.Common.csproj">
+      <Project>{0651fb7e-69c3-4927-b66f-fb44a28aecff}</Project>
+      <Name>EngineOverflow.Data.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Data\EngineOverflow.Data.Models\EngineOverflow.Data.Models.csproj">
       <Project>{34ca6432-b615-4bc7-b4f2-c53015487288}</Project>
       <Name>EngineOverflow.Data.Models</Name>
