--- a/Source/Data/EngineOverflow.Data.Models/EngineOverflow.Data.Models.csproj
+++ b/Source/Data/EngineOverflow.Data.Models/EngineOverflow.Data.Models.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationUser.cs" />
+    <Compile Include="Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tag.cs" />
   </ItemGroup>
