--- a/Source/Web/EngineOverflow.Web/packages.config
+++ b/Source/Web/EngineOverflow.Web/packages.config
@@ -23,9 +23,9 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
-  <package id="Modernizr" version="2.8.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="Twitter.Bootstrap.Bootswatch.Cosmo" version="3.2.0.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
 </packages>
