--- a/Source/Web/EngineOverflow.Web/packages.config
+++ b/Source/Web/EngineOverflow.Web/packages.config
@@ -32,6 +32,7 @@
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
   <package id="TinyMCE" version="4.3.12" targetFramework="net451" />
+  <package id="TinyMCE.MVC" version="3.4.7" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Cosmo" version="3.2.0.0" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net451" />
