added sweet alert notifications

--- a/Source/Web/EngineOverflow.Web/EngineOverflow.Web.csproj
+++ b/Source/Web/EngineOverflow.Web/EngineOverflow.Web.csproj
@@ -414,6 +414,8 @@
     <Content Include="Scripts\tinymce\tinymce.js" />
     <Content Include="Scripts\tinymce\tinymce.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="sweetalert\sweetalert.css" />
+    <Content Include="sweetalert\sweetalert.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
