--- a/Source/Web/EngineOverflow.Web/packages.config
+++ b/Source/Web/EngineOverflow.Web/packages.config
@@ -31,6 +31,7 @@
   <package id="Ninject.Web.Common.WebHost" version="3.2.3.0" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net451" />
+  <package id="SweetAlert.Base" version="1.1.3" targetFramework="net451" />
   <package id="TinyMCE" version="4.3.12" targetFramework="net451" />
   <package id="TinyMCE.MVC" version="3.4.7" targetFramework="net451" />
   <package id="Twitter.Bootstrap.Bootswatch.Cosmo" version="3.2.0.0" targetFramework="net451" />
